welcome.lessons.welcome.loopdowhile.Poucet2.scala.error
Poucet:6: error: ';' expected but '{' found.
  } while(!crossing()){
                      ^